[Rahul] | BAH-3270 | Add. Bump Spring 4.3->5.0
Bump Spring Version 4.3.0.RELEASE to 5.0.0.RELEASE, multiple dependency version bumped, removed deprecated APIs, rewrote buildNewRequest as a static method